--- a/wechatAppDemo/pages/index1/sousuo/index.wxss
+++ b/wechatAppDemo/pages/index1/sousuo/index.wxss
@@ -1,8 +1,6 @@
 /* wechatAppDemo/pages/sousuo/index.wxss */
 .search-container {
   padding: 20rpx;
-  background-color: #fff;
-  min-height: 100vh;
 }
 
 .search-box {
@@ -13,49 +11,67 @@
 
 .search-input {
   flex: 1;
-  height: 70rpx;
-  background-color: #f5f5f5;
-  border-radius: 35rpx;
-  padding-left: 30rpx;
-  font-size: 28rpx;
+  height: 80rpx;
+  background: #f5f5f5;
+  border-radius: 40rpx;
+  padding: 0 30rpx;
+  margin-right: 20rpx;
+}
+.search-btn {
+  background: blue;
+  color: #f5f5f5;
 }
 
-.cancel-btn {
-  width: 120rpx;
-  height: 70rpx;
-  line-height: 70rpx;
-  text-align: center;
-  background: none;
-  color: #333;
-  font-size: 28rpx;
-  padding: 0;
+
+.cancel-btn::after {
+  border: none;
 }
 
-.history-title, .result-title {
-  font-size: 28rpx;
-  color: #999;
+.history-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 20rpx;
+}
+
+.history-title {
+  font-size: 32rpx;
+  font-weight: bold;
+  color: #333;
+}
+
+.clear-history {
+  font-size: 26rpx;
+  color: #999;
 }
 
 .history-tags {
   display: flex;
   flex-wrap: wrap;
-  gap: 15rpx;
+  gap: 20rpx;
 }
 
 .history-tag {
-  background-color: #f5f5f5;
-  padding: 10rpx 20rpx;
-  border-radius: 20rpx;
+  background: #f5f5f5;
+  padding: 12rpx 24rpx;
+  border-radius: 30rpx;
   font-size: 26rpx;
-}
-
-.result-item {
-  padding: 20rpx 0;
-  border-bottom: 1rpx solid #eee;
+  color: #666;
 }
 
 .result-title {
+  font-size: 32rpx;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 20rpx;
+}
+
+.result-item {
+  padding: 30rpx 0;
+  border-bottom: 1rpx solid #eee;
+}
+
+.result-item .result-title {
   font-size: 30rpx;
   color: #333;
   margin-bottom: 10rpx;
@@ -64,4 +80,5 @@
 .result-desc {
   font-size: 26rpx;
   color: #666;
+  line-height: 1.4;
 }
