--- a/wechatAppDemo/pages/index1/sousuo/index.wxml
+++ b/wechatAppDemo/pages/index1/sousuo/index.wxml
@@ -7,25 +7,36 @@
       placeholder="请输入搜索内容" 
       class="search-input"
       focus="{{true}}"
+      value="{{searchText}}"
+      bindinput="onInput"
+      bindconfirm="onSearch"
     />
-    <button class="cancel-btn" bindtap="cancelSearch">取消</button>
+    <button class="search-btn" bindtap="onSearch">搜索</button>
   </view>
 
   <!-- 搜索历史 -->
   <view class="history-section" wx:if="{{showHistory}}">
-    <view class="history-title">搜索历史</view>
+    <view class="history-header">
+      <view class="history-title">搜索历史</view>
+      <view class="clear-history" bindtap="clearHistory" wx:if="{{searchHistory.length > 0}}">清空</view>
+    </view>
     <view class="history-tags">
-      <view class="history-tag" wx:for="{{searchHistory}}" wx:key="*this">
+      <view 
+        class="history-tag" 
+        wx:for="{{searchHistory}}" 
+        wx:key="*this"
+        bindtap="onHistoryItemTap"
+        data-keyword="{{item}}"
+      >
         {{item}}
       </view>
     </view>
   </view>
 
-  <!-- 搜索结果（默认隐藏） -->
+  <!-- 搜索结果 -->
   <view class="result-section" wx:if="{{showResult}}">
     <view class="result-title">搜索结果</view>
     <view class="result-list">
-      <!-- 搜索结果列表项 -->
       <view class="result-item" wx:for="{{searchResult}}" wx:key="id" bindtap="goToDetail" data-id="{{item.id}}">
         <view class="result-title">{{item.title}}</view>
         <view class="result-desc">{{item.desc}}</view>
