--- a/wechatAppDemo/pages/index3/index.wxml
+++ b/wechatAppDemo/pages/index3/index.wxml
@@ -21,7 +21,7 @@
 
         <view class="rank-user">
           <view class="user-avatar">
-            <image src="{{item.avatar || '/images/empty.png'}}" mode="aspectFit" />
+            <image src="{{item.avatar || '/images/empty.png'}}" mode="aspectFill" />
           </view>
           <view class="user-name">{{item.name}}</view>
         </view>
@@ -35,9 +35,9 @@
     <view class="my-card">
       <view class="my-header">
         <view class="my-avatar">
-      <view style="width:100%;height:100%;background:#000;border-radius:50%;"></view>
+          <image src="{{avatar}}" mode="aspectFill"></image>
     </view>
-        <view class="my-name">张三</view>
+        <view class="my-name">{{username}}</view>
       </view>
       <view class="my-stats-grid">
         <view class="stat-box">
