--- a/wechatAppDemo/pages/index/exercise/single/single.wxss
+++ b/wechatAppDemo/pages/index/exercise/single/single.wxss
@@ -232,6 +232,30 @@
   color: #F44336;
 }
 
+.correct-answer {
+  margin-top: 16rpx;
+  padding: 12rpx 16rpx;
+  background-color: #e6f7ff;
+  border-radius: 8rpx;
+  color: #1890ff;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.night-mode .correct-answer {
+  background-color: #111b2d;
+  color: #4da3ff;
+}
+
+.correct-label {
+  color: #096dd9;
+  font-weight: bold;
+}
+
+.night-mode .correct-label {
+  color: #69b1ff;
+}
+
 .analysis-text {
   font-size: 24rpx;
   color: #666666;
